# slowpocket

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
data/: .env.example  Cargo.toml
data/migrations/: 20241015201544_user.up.sql
data/src/: errors.rs  lib.rs  model.rs  settings.rs
data/src/model/: user.rs
data/src/repository/: user.rs
data/src/repository/user/: postgres.rs
data/tests/: user.rs  utils.rs
data/tests/fixtures/: user.sql
docker/: Dockerfile.mishaszu-rust  docker-compose.yaml
